add styles in the page film

--- a/src/app/home/pages/films/films.component.css
+++ b/src/app/home/pages/films/films.component.css
@@ -32,9 +32,9 @@
 }
 
 
-::ng-deep nz-card {   
+.cardFilms {  
     
-    border-radius: 3% !important;
+    border-radius: 20px !important;
     background: linear-gradient(45deg, rgba(0,0,0,1) 50%, transparent 100%) !important;
     backdrop-filter: blur(2px) !important;
     z-index: 5 !important;
@@ -46,7 +46,9 @@
     
 }
 
-
+a {
+    color: white
+}
 
 img{
     height: 300px;
@@ -59,6 +61,7 @@ img{
     cursor: pointer !important;
 
 }
+
 
 @media (max-width: 940px) { 
     .filmsContainer {
