--- a/src/app/home/pages/main/main.component.html
+++ b/src/app/home/pages/main/main.component.html
@@ -1,15 +1,12 @@
-<div class="mainContainer">
-    <section>
+<div >
+    <div class="headerContainer">
         <app-header></app-header>
-    </section>
-    <section class="containerCarousel">
-        <app-carousel></app-carousel>
-    </section>
-    <section class="containerFilms2">
+    </div>    
+    <div class="containerFilms2">
         <router-outlet></router-outlet>
-    </section>
-    <section>
+    </div>
+    <div>
         <app-footer></app-footer>
-    </section>
+    </div>
 </div>
 
