--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
         <img class="logo" src="https://res.cloudinary.com/dgq2ycemj/image/upload/v1622327923/pelisFilmLogo_zaprk1.png" alt="">
         <ul>
             <li routerLink="/home">Inicio</li>
-            <li>Series</li>
+            <li routerLink="/film/4567">Series</li>
             <li>Peliculas</li>
             <li>Novedades</li>
             <li>Acerca de</li>
@@ -15,6 +15,6 @@
                 <button type="submit" href=""><span class="icon icon-search"></span></button> 
             </form>        
             <a href=""><span class="icon icon-bell"></span></a>     
-            <a href=""><span class="icon icon-user"></span></a>        
+            <a href=""><span class="icon icon-user"></span></a> 
     </div>
 </div>
