--- a/src/app/home/pages/film/film.component.html
+++ b/src/app/home/pages/film/film.component.html
@@ -1,1 +1,14 @@
-<p>film works!</p>
+<div class="cardContainer" style=" background-image: url('https://image.tmdb.org/t/p/original{{film.backdrop_path}}'); background-size: 100%;">
+    <div class="containerFilm">
+        <nz-card class="cardFilm">
+            <img src="https://image.tmdb.org/t/p/w500{{film.poster_path}}" alt="">
+        </nz-card>
+        <div class="descriptionContainer">
+            <p><span>Título:</span> {{film.title || film.original_title}}</p>
+            <p><span>Lanzamiento:</span> {{film.release_date}}</p>
+            <p><span>Síntesis:</span> {{film.overview}}</p>
+            <p><span>Lenguaje Original:</span> {{film.original_language}}</p>
+            <p><span>Puntaje:</span> {{film.vote_average}}</p>
+        </div>
+    </div>
+</div>
