--- a/src/app/home/pages/main/main.component.css
+++ b/src/app/home/pages/main/main.component.css
@@ -1,12 +1,13 @@
 
+.headerContainer {
+ z-index: 10;
+
+
+
+}
 .containerFilms2 {
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(14,5,116,1) 50%, rgb(13, 44, 97) 100%);
-    position: relative;
-    z-index: -5;
+    z-index: -3;
 }
 
-.containerCarousel {
-    position: relative;
-    z-index: -10;
-}
