antes de actualizar angular

--- a/src/app/home/pages/film/film.component.html
+++ b/src/app/home/pages/film/film.component.html
@@ -1,8 +1,8 @@
 <div class="cardContainer" style=" background-image: url('https://image.tmdb.org/t/p/original{{film.backdrop_path}}'); background-size: 100%;">
     <div class="containerFilm">
-        <nz-card class="cardFilm">
+        <!-- <p-card class="cardFilm">
             <img src="https://image.tmdb.org/t/p/w500{{film.poster_path}}" alt="">
-        </nz-card>
+        </p-card> -->
         <div class="descriptionContainer">
             <p><span>Título:</span> {{film.title || film.original_title}}</p>
             <p><span>Lanzamiento:</span> {{film.release_date}}</p>
