--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,16 +2,16 @@
     <div class="headerRow">
         <img class="logo" src="https://res.cloudinary.com/dgq2ycemj/image/upload/v1622327923/pelisFilmLogo_zaprk1.png" alt="">
         <ul>
-            <li routerLink="/home">Inicio</li>
-            <li routerLink="/film/4567">Series</li>
+            <li routerLink="/home" (click)="refresh()">Inicio</li>
+            <li routerLink="/series">Series</li>
             <li>Peliculas</li>
-            <li>Novedades</li>
+            <li routerLink="/novedades">Novedades</li>
             <li>Acerca de</li>
         </ul>
     </div>
     <div class="userHeader" >
             <form (ngSubmit)="buscar(miFormulario.value)" #miFormulario="ngForm">
-                <input autofocus class="inputSearch" ngModel name="film" placeholder="Peliculas, series" type="text">
+                <input (input)="teclaPresionada()" autocomplete="off" autofocus class="inputSearch" [(ngModel)]="termino" name="film" placeholder="Peliculas, series" type="text">
                 <button type="submit" href=""><span class="icon icon-search"></span></button> 
             </form>        
             <a href=""><span class="icon icon-bell"></span></a>     
