--- a/src/app/home/pages/film/film.component.html
+++ b/src/app/home/pages/film/film.component.html
@@ -1,4 +1,4 @@
-<div class="cardContainer" style=" background-image: url('https://image.tmdb.org/t/p/original{{film.backdrop_path}}'); background-size: 100%;">
+<div *ngIf="film" class="cardContainer" style=" background-image: url('https://image.tmdb.org/t/p/original{{film.backdrop_path}}'); background-size: 100%;">
     <div class="containerFilm">
         <p-card class="cardFilm">
             <img src="https://image.tmdb.org/t/p/w500{{film.poster_path}}" alt="">
