--- a/src/app/home/pages/main/main.component.css
+++ b/src/app/home/pages/main/main.component.css
@@ -1,8 +1,54 @@
 
 .headerContainer {
  z-index: 10;
+ position: absolute;
+}
+
+ul {
+    margin-right: 18%;
+    padding: 0;
+    width: 300px;
+    position: absolute;
+    backdrop-filter: blur(5px);
+}
+a {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+    text-align: center;
+}
+p {
+    padding-left: 5%;
+}
+
+li {
+    list-style: none;
+    padding:2%
+    
+}
+
+li:hover {
+    cursor: pointer;
+    background-color: rgba(0,0,0,0.5);
+}
+
+img {
+    width: 15%;
+}
 
 
+
+.listSugerencias { 
+    margin-top: 70px;
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    width: 100vw;
+    z-index: 11;
+    color: white;
 
 }
 .containerFilms2 {
