--- a/src/app/home/pages/series/series.component.html
+++ b/src/app/home/pages/series/series.component.html
@@ -1,11 +1,12 @@
-<app-carousel [films]="films"></app-carousel>
+<app-carousel [films]="seriesFilms"></app-carousel>
 <div class="containerSections">
-    <section *ngIf="films" class="filmsContainer">        
-            <p-card  *ngFor="let film of films ">
-                <a [routerLink]="['/detail/', film.media_type, film.id]">
+    <section *ngIf="seriesFilms" class="filmsContainer">        
+            <p-card  *ngFor="let film of seriesFilms ">
+                <a [routerLink]="['/detail/tv/', film.id]">
                     <div class="tittle">{{film.title | slice:0:21}}</div>
                     <div class="tittle">{{film.original_name | slice:0:21}}</div>
-                    <br>                    
+                    <br>
+                    <p-progressSpinner *ngIf="film.poster_path == null"></p-progressSpinner>
                     <div *ngIf="film.poster_path != null" class="containerImg">
                         <img src="https://image.tmdb.org/t/p/w500{{film.poster_path}}" alt="">
                     </div>
